# Ocaml-Max-Heap

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/bench/.bench_compare.eobjs/byte/: dune__exe__Bench_compare.cmi  dune__exe__Bench_compare.cmti
_build/default/bench/.bench_compare.eobjs/native/: dune__exe__Bench_compare.cmx
_build/default/bench/.bench_heap.eobjs/byte/: dune__exe__Bench_heap.cmi  dune__exe__Bench_heap.cmti
_build/default/bench/.merlin-conf/: exe-bench_compare  exe-bench_heap
_build/default/src/: max_heap.cma  max_heap.cmxa  max_heap.cmxs  max_heap.ml  max_heap.mli  max_heap_string.cma  max_heap_string.cmxa  max_heap_string.cmxs
_build/default/src/.merlin-conf/: lib-max_heap  lib-max_heap_string
_build/default/test/: test_heap_crash.ml  test_max_heap_string_props.ml
_build/default/test/.merlin-conf/: exe-test_heap_crash  exe-test_max_heap_string_props
_build/default/test/.test_max_heap_string_props.eobjs/: dune__exe.ml-gen  dune__exe__Test_max_heap_string_props.impl.d  dune__exe__Test_max_heap_string_props.intf.d
bench/: bench_compare.ml  bench_heap.ml  dune
profiles/20251013-184428/: p1.txt
profiles/20251013-190632/: p2.txt
profiles/20251013-193430/: p3.txt
profiles/20251013-194507/: p4.txt
profiles/20251013-195255/: p5.txt
src/: dune  max_heap_string.ml  max_heap_string.mli
test/: dune
(+21 files in other folders)
